--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
 substitutions:
   _IMAGE1_NAME: gcr.io/fuse-ai/test-app-kaniko
   _IMAGE1_DOCKERFILE_PATH: Dockerfile
-  _K8S_APP_NAME: flask-app
+  _K8S_APP_NAME: flask-app-app
   _K8S_NAMESPACE: default
   _K8S_YAML_PATH: deployment.yaml
   _K8S_LOCATION: us-central1-c
